CHANGELOG:

ver 1.6.1 (04/13/2008)
 Changed: 	_update method refactored.
 Changed: 	Updated to Prototype 1.6.0.1 and Script.aculo.us 1.8.1

ver 1.6.0 (12/17/2007)
 Added: 	Added 2 methods for resizing Modalbox height for content (resizeToContent and resizeToInclude)
 Added: 	Preliminary support for ASP.NET controls. Added boolean parameter 'aspnet'.
 Added: 	Added onException callback support for Ajax request
 Added: 	Experimental CSS3 drop shadow and rounded corners added
 Added: 	Added 'autoFocusing' option [#133]
 Added: 	Added a way to customize close link text [#153]
 Added: 	Added 'beforeHide' callback which is being fired right before slide up effect [#154]

 Changed: 	Updated to prototype 1.6.0 and script.aculo.us 1.8.0
 Changed: 	Code base refactored to be prototype 1.6.0 compliant
 Changed: 	Browser dependant checks rewritten with Prototype.Browser object
 Changed: 	_prepareIE method now includes toggleSelects functionality
 Changed: 	_toggleSelects and _setOverlay methods removed completely
 Changed: 	_prepareIE method heavily refactored
 Changed: 	DOM insertions refactored with prototype 1.6.0 methods
 Changed: 	Element creation refactored with prototype 1.6.0 methods. builder.js removed.
 Changed: 	Ajax.request callback change: onComplete -> onSuccess
 Changed: 	No title case improved. Fixed extra header space addition, changed CSS
 Changed: 	_insertContent method re-factored to be independed
 Changed: 	loadContent method changed to strip scripts while inserting to DOM (plain HTML case)

 Fixed: 	IE7 won't hide selects and scroll on top of page anymore
 Fixed: 	Patched IE keyboard handling for Tab-key
 Fixed: 	_kbdHandler "space" key case fixed 
 Fixed: 	overlayClose parameter for window sequences (wizards) fixed [#139]
 Fixed: 	Selecting a form element with mouse tab order fixed [#134]
 Fixed: 	Fixed header hiding option in MSIE
 Fixed: 	Fixed IDs renaming in MSIE (JS object content type case)