@@ -4,6 +4,9 @@ ver 1.6.1 (04/13/2008)
  Changed: 	_update method refactored.
  Changed: 	Updated to Prototype 1.6.0.1 and Script.aculo.us 1.8.1
 
+ Fixed: 	Fixed double tabbing in forms for Opera and other browsers [#199]
+ Fixed: 	Any characters are now accepted to type in form in Safari/WebKit [#201]
+
 ver 1.6.0 (12/17/2007)
  Added: 	Added 2 methods for resizing Modalbox height for content (resizeToContent and resizeToInclude)
  Added: 	Preliminary support for ASP.NET controls. Added boolean parameter 'aspnet'.
